Boolean_set_operations_2/demo/Boolean_set_operations_2/errors/Helper_is_not_direct_base_of
In file included from
/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Piecewise_region_graphics_item.h:24:0,
                 
from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Piecewise_set_graphics_item.h:24,
                 
from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Circular_polygons.h:26,
                 
from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/Boolean_set_operations_2.cpp:72:
/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Piecewise_boundary_graphics_item.h:48:69: error: expected identifier before ‘,’ token
   Piecewise_boundary_graphics_item( Helper* aBoundary,              ,
                                                                     ^

/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Piecewise_boundary_graphics_item.h: In constructor ‘CGAL::Qt::Piecewise_boundary_graphics_item<Helper, Draw_piece_, Piece_bbox_>::Piecewise_boundary_graphics_item(Helper*, int, const Draw_piece&, const Piece_bbox&)’:

/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Piecewise_boundary_graphics_item.h:54:15: error: ‘aBoundary’ is not a class, namespace, or enumeration
     mBoundary=aBoundary::Polygon_2;
               ^

In file included 
from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Piecewise_set_graphics_item.h:24:0,
                 
from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Circular_polygons.h:26,
                 
from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/Boolean_set_operations_2.cpp:72:

/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Piecewise_region_graphics_item.h: In constructor ‘CGAL::Qt::Piecewise_region_graphics_item<Helper, Draw_piece_, Piece_bbox_>::Piecewise_region_graphics_item(Helper*, const Draw_piece&, const Piece_bbox&)’:

/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Piecewise_region_graphics_item.h:58:16: error: ‘aRegion’ is not a class, namespace, or enumeration
        mRegion=aRegion::Polygon_with_holes_2;     
                ^

In file included 
from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/Boolean_set_operations_2.cpp:72:0:

/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Circular_polygons.h: In instantiation of ‘CGAL::Qt::Circular_set_graphics_item<Circular_set>::Circular_set_graphics_item(Circular_set*) [with Circular_set = CGAL::General_polygon_set_2<CGAL::Gps_circle_segment_traits_2<CGAL::Epeck> >]’:

/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/Boolean_set_operations_2.cpp:180:15:   required from ‘Rep<GI_, Set_>::Rep() [with GI_ = CGAL::Qt::Circular_set_graphics_item<CGAL::General_polygon_set_2<CGAL::Gps_circle_segment_traits_2<CGAL::Epeck> > >; Set_ = CGAL::General_polygon_set_2<CGAL::Gps_circle_segment_traits_2<CGAL::Epeck> >]’

/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/Boolean_set_operations_2.cpp:294:26:   required from here

/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Circular_polygons.h:301:61: error: type ‘CGAL::Qt::Piecewise_set_graphics_item<CGAL::General_polygon_set_2<CGAL::Gps_circle_segment_traits_2<CGAL::Epeck> >, CGAL::Qt::Draw_circular_X_monotone_curve, CGAL::Qt::Circular_X_monotone_bbox, CGAL::Qt::Helper<CGAL::Gps_circle_segment_traits_2<CGAL::Epeck> > >’ is not a direct base of ‘CGAL::Qt::Circular_set_graphics_item<CGAL::General_polygon_set_2<CGAL::Gps_circle_segment_traits_2<CGAL::Epeck> > >’
   Circular_set_graphics_item(Circular_set* aSet) : Base(aSet) {}
                                                             ^


/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Circular_polygons.h:301:61: error: no matching function for call to ‘CGAL::Qt::Piecewise_set_graphics_item<CGAL::General_polygon_set_2<CGAL::Gps_circle_segment_traits_2<CGAL::Epeck> >, CGAL::Qt::Draw_circular_X_monotone_curve, CGAL::Qt::Circular_X_monotone_bbox, CGAL::Gps_circle_segment_traits_2<CGAL::Epeck> >::Piecewise_set_graphics_item()’

In file included 
from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Circular_polygons.h:26:0,
                 
from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/Boolean_set_operations_2.cpp:72:

/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Piecewise_set_graphics_item.h:79:3: note: candidate: CGAL::Qt::Piecewise_set_graphics_item<Piecewise_set_, Draw_piece_, Piece_bbox_, Helper>::Piecewise_set_graphics_item(CGAL::Qt::Piecewise_set_graphics_item<Piecewise_set_, Draw_piece_, Piece_bbox_, Helper>::Piecewise_set*, const Draw_piece&, const Piece_bbox&) [with Piecewise_set_ = CGAL::General_polygon_set_2<CGAL::Gps_circle_segment_traits_2<CGAL::Epeck> >; Draw_piece_ = CGAL::Qt::Draw_circular_X_monotone_curve; Piece_bbox_ = CGAL::Qt::Circular_X_monotone_bbox; Helper = CGAL::Gps_circle_segment_traits_2<CGAL::Epeck>; CGAL::Qt::Piecewise_set_graphics_item<Piecewise_set_, Draw_piece_, Piece_bbox_, Helper>::Piecewise_set = CGAL::General_polygon_set_2<CGAL::Gps_circle_segment_traits_2<CGAL::Epeck> >; CGAL::Qt::Piecewise_set_graphics_item<Piecewise_set_, Draw_piece_, Piece_bbox_, Helper>::Draw_piece = CGAL::Qt::Draw_circular_X_monotone_curve; CGAL::Qt::Piecewise_set_graphics_item<Piecewise_set_, Draw_piece_, Piece_bbox_, Helper>::Piece_bbox = CGAL::Qt::Circular_X_monotone_bbox]
   Piecewise_set_graphics_item( Piecewise_set* aSet, Draw_piece const& aPieceDrawer = Draw_piece(), Piece_bbox const& aPieceBBox = Piece_bbox()
   ^

/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/include/QT5/Piecewise_set_graphics_item.h:79:3: note:   candidate expects 3 arguments, 0 provided
CMakeFiles/Boolean_set_operations_2.dir/build.make:154: recipe for target 'CMakeFiles/Boolean_set_operations_2.dir/Boolean_set_operations_2.cpp.o' failed

make[2]: *** [CMakeFiles/Boolean_set_operations_2.dir/Boolean_set_operations_2.cpp.o] Error 1
CMakeFiles/Makefile2:515: recipe for target 'CMakeFiles/Boolean_set_operations_2.dir/all' failed
make[1]: *** [CMakeFiles/Boolean_set_operations_2.dir/all] Error 2
Makefile:94: recipe for target 'all' failed
make: *** [all] Error 2

